# youtube_analysis

./: .env.example  .gitignore  README-YT-DATA.md  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: yt-fetch-comments.yml  yt-fetch-search.yml  yt-fetch-trending.yml  yt-video-stats-snapshot.yml
yt_data/: __init__.py  __main__.py  cli.py  config.py
yt_data/commands/: __init__.py  fetch_channels.py  fetch_comments.py  fetch_search.py  fetch_video_stats.py  fetch_videos.py
yt_data/etl/: __init__.py
yt_data/etl/extract/: __init__.py  channel.py  comment.py  search.py  video.py  video_stats.py
yt_data/etl/load/: __init__.py  channel.py  comment.py  video.py  video_stats.py
yt_data/etl/transform/: __init__.py  channel.py  comment.py  video.py  video_stats.py
yt_data/models/: __init__.py  base.py  channel.py  comment.py  video.py  video_stats.py
